--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ section p {
     max-width: 600px;
     margin: 100px auto;
     padding: 20px;
-    background: #ee3535;
+    background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
