--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,13 @@ ul li ul li {
 .degree-info h2 {
     font-size: 28px;
     margin-bottom: 20px;
+    color: #333;
 }
 
 .degree-info h3 {
     font-size: 24px;
     margin-bottom: 10px;
+    color: #666;
 }
 
 .degree-info ul {
@@ -111,6 +113,7 @@ ul li ul li {
 
 .degree-info ul li strong {
     font-size: 18px;
+    color: #333;
 }
 
 .degree-info ul li ul {
@@ -120,6 +123,7 @@ ul li ul li {
 
 .degree-info ul li ul li {
     margin-bottom: 5px;
+    color: #555;
 }
 
 /* Header Styles */
